# rp2350-psram-test

./: CMakeLists.txt  main.cpp
randmem/: randmem.c
